<resources>
    <string name="app_name">NYTimeDemo</string>
    <string name="search">Search</string>
    <string name="search_articles">Search Articles</string>
    <string name="popular">Popular</string>
    <string name="most_viewed">Most Viewed</string>
    <string name="most_emailed">Most Emailed</string>
    <string name="most_shared">Most Shared</string>
    <string name="search_articles_here">Search articles here ..</string>
</resources>