<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/search_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/search_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_category"
        android:layout_centerInParent="true"
        android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
        android:text="@string/search_articles" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/popular_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        android:textSize="18sp"
        android:text="@string/popular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_action"
        app:layout_constraintStart_toStartOf="parent"
         />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/most_viewed_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/popular_category"
        android:layout_centerInParent="true"
        android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
        android:text="@string/most_viewed" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/most_shared_action"
        android:layout_width="match_parent"
        android:padding="8dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/most_viewed_action"
        android:layout_centerInParent="true"
        android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
        android:text="@string/most_shared" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/most_emailed_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/most_shared_action"
        android:layout_centerInParent="true"
        android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
        android:text="@string/most_emailed" />


</androidx.constraintlayout.widget.ConstraintLayout>